--- a/page_code/css/style.css
+++ b/page_code/css/style.css
@@ -1,4 +1,13 @@
+body{
+     min-height: 100dvh;
+    display: grid;
+    grid-template-rows: 100px auto 120px;
+    margin: 0%;
+    min-height: 100dvh;
+}
 header{
+    background-color: rgb(0, 136, 255);
+    width: 100%;
     display: flex;
     align-items: center;
 }
@@ -25,4 +34,40 @@ nav{
     padding: .2em 1em;
     padding-right: .5em;
     font-size: 20px;
+}
+main{
+    margin: auto;
+    width: 100%;
+}
+section{
+    
+    display: flex;
+    justify-content: space-around;
+}
+article{
+    width: 30%;
+    padding: 24px 11px;
+    margin:auto;
+    border-radius:20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+.article_icon{
+    width: 250px;
+    height: 250px;
+}
+.article_p{
+    margin: 10px auto;
+    width: 250px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    text-align: center;
+    width: 100%;
+    background-color: rgb(0, 136, 255);
+}
+footer h5{
+    margin: 50px;
 }
