--- a/page_code/css/style.css
+++ b/page_code/css/style.css
@@ -1,15 +1,34 @@
+
+@font-face{
+    font-family: "CanelaText-Medium";
+    src: url('../materials/Canela\ Text\ Family/CanelaText-Bold-Trial.otf') format("opentype");
+    font-weight: normal;
+}
+@font-face{
+    font-family: "CanelaText-Bold";
+    src: url('../materials/Canela\ Text\ Family/CanelaText-Medium-Trial.otf') format("opentype");
+    font-weight: normal;
+}
+@font-face{
+    font-family: "CanelaText-Light";
+    src: url('../materials/Canela\ Text\ Family/CanelaText-Light-Trial.otf') format("opentype");
+    font-weight: normal;
+}
 body{
-     min-height: 100dvh;
+    min-height: 100dvh;
     display: grid;
     grid-template-rows: 100px auto 120px;
     margin: 0%;
     min-height: 100dvh;
+    background-color: #EDEBD7;
 }
 header{
-    background-color: rgb(0, 136, 255);
-    width: 100%;
+    background-color: #c3e7f1;
+    width: auto;
     display: flex;
     align-items: center;
+    font-family: "CanelaText-Medium", serif;
+    border: 1px solid #20373b;
 }
 header img{
     height: 80px;
@@ -31,21 +50,39 @@ nav{
 }
 .menu li a{
     text-decoration: none;
+    color: #20373b;
     padding: .2em 1em;
     padding-right: .5em;
-    font-size: 20px;
+    font-size: 24px;
 }
 main{
     margin: auto;
     width: 100%;
 }
-section{
-    
+footer{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    text-align: center;
+    width: auto;
+    background-color: #c3e7f1;
+    font-family: "CanelaText-Medium", serif;
+    border: 1px solid #20373b;
+}
+footer h5{
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+/*Articles*/
+section{ 
     display: flex;
     justify-content: space-around;
 }
 article{
-    width: 30%;
+    width: 28em;
+    height: 33em;
     padding: 24px 11px;
     margin:auto;
     border-radius:20px;
@@ -56,18 +93,56 @@ article{
     width: 250px;
     height: 250px;
 }
+.climate{
+    background-color: #20373b;
+    color: #c3e7f1;
+    border: 2px solid #c3e7f1;
+    border-radius: 20px;
+}
+.education{
+    background-color: #ffc64f;
+    color: #20373b;
+    border: 2px solid #20373b;
+    border-radius: 20px;
+}
+.equality{
+    background-color: #c3e7f1;
+    color: #20373b;
+    border: 2px solid #20373b;
+    border-radius: 20px;
+}
+/*Article content*/
+.article_header{
+    font-family: "CanelaText-Medium", serif;
+    font-size: 32px;
+}
 .article_p{
     margin: 10px auto;
     width: 250px;
+    font-family: "CanelaText-Light", serif;
+    font-weight: 700;
+    font-size: 20px;
 }
-footer{
-    display: flex;
-    justify-content: center;
-    font-size: 24px;
-    text-align: center;
-    width: 100%;
-    background-color: rgb(0, 136, 255);
-}
-footer h5{
-    margin: 50px;
+
+@media only screen and (max-width: 1400px){
+    section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    article{
+        margin-top: 40px;
+    }
+    footer{
+        display: flex;
+        margin-top: 40px;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        width: auto;
+        margin-bottom:0 ;
+    }
+    body{
+        grid-template-rows: 100px auto auto;
+    }
 }
