--- a/page_code/css/style.css
+++ b/page_code/css/style.css
@@ -48,7 +48,7 @@ nav{
     margin-right: 20px;
     display: inline-block;
 }
-.menu li a{
+a{
     text-decoration: none;
     color: #20373b;
     padding: .2em 1em;
