--- a/page_code/css/style.css
+++ b/page_code/css/style.css
@@ -35,6 +35,12 @@ header img{
     margin: 10px 20px;
     margin-left:5%;
 }
+.hamburger-lines{
+    display: none;
+}
+.menu-toggle{
+    display: none;
+}
 nav{
      margin-left: auto;
      margin-right: 10%;
@@ -145,4 +151,45 @@ article{
     body{
         grid-template-rows: 100px auto auto;
     }
+}
+@media only screen and (max-width: 1050px){
+   .menu-button-container {
+    display: flex;
+  }
+  .menu {
+    position: absolute;
+    top: 0;
+    margin-top: 50px;
+    left: 0;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #menu-toggle ~ .menu li {
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu li {
+    border: 1px solid #333;
+    height: 2.5em;
+    padding: 0.5em;
+    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .menu > li {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0.5em 0;
+    width: 100%;
+    color: white;
+    background-color: #222;
+  }
+  .menu > li:not(:last-child) {
+    border-bottom: 1px solid #444;
+  }
+
 }
