--- a/page_code/css/style.css
+++ b/page_code/css/style.css
@@ -39,6 +39,7 @@ body {
     margin: 0%;
     min-height: 100dvh;
     background-color: #EDEBD7;
+}
 .nav-menu {
     display: flex;
     align-items: center;
@@ -104,7 +105,81 @@ a{
     padding-right: .5em;
     font-size: 24px;
 }
-
+nav{
+     margin-left: auto;
+     margin-right: 10%;
+}
+.menu{
+    font-size: 20px;
+    font-weight: bold;
+    list-style-type: none;
+}
+.menu li{
+    margin-right: 20px;
+    display: inline-block;
+}
+.menu li:hover a{
+    background-color: #20373b;
+    color: #c3e7f1;
+    border-radius: 8px;
+}
+a{
+    text-decoration: none;
+    color: #20373b;
+    padding: .2em 1em;
+    padding-right: .5em;
+    font-size: 24px;
+}
+main{
+    margin: auto;
+    width: 100%;
+}
+section{ 
+    display: flex;
+    justify-content: space-around;
+}
+article{
+    width: 28em;
+    height: 33em;
+    padding: 24px 11px;
+    margin:auto;
+    border-radius:20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+.article_icon{
+    width: 250px;
+    height: 250px;
+}
+.climate{
+    background-color: #20373b;
+    color: #c3e7f1;
+    border: 2px solid #c3e7f1;
+    border-radius: 20px;
+}
+.education{
+    background-color: #ffc64f;
+    color: #20373b;
+    border: 2px solid #20373b;
+    border-radius: 20px;
+}
+.equality{
+    background-color: #c3e7f1;
+    color: #20373b;
+    border: 2px solid #20373b;
+    border-radius: 20px;
+}
+.article_header{
+    font-family: "CanelaText-Medium", serif;
+    font-size: 32px;
+}
+.article_p{
+    margin: 10px auto;
+    width: 250px;
+    font-family: "CanelaText-Light", serif;
+    font-weight: 700;
+    font-size: 20px;
+}
 a:hover {
    color: #fff;
    background-color: #579cab;
@@ -115,6 +190,7 @@ a:visited {
 }
 
 .main-content {
+    width: 70%;
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 20%;
