--- a/page_code/css/style_form.css
+++ b/page_code/css/style_form.css
@@ -1,4 +1,3 @@
-
 @font-face{
     font-family: "CanelaText-Medium";
     src: url('../materials/Canela\ Text\ Family/CanelaText-Bold-Trial.otf') format("opentype");
@@ -14,29 +13,33 @@
     src: url('../materials/Canela\ Text\ Family/CanelaText-Light-Trial.otf') format("opentype");
     font-weight: normal;
 }
-body{
-    min-height: 100dvh;
-    display: grid;
-    grid-template-rows: 100px auto 120px;
-    margin: 0%;
-    min-height: 100dvh;
-    background-color: #EDEBD7;
-}
-header{
+
+
+header {
     background-color: #c3e7f1;
     width: auto;
     display: flex;
     align-items: center;
     font-family: "CanelaText-Medium", serif;
     border: 1px solid #20373b;
+
 }
-.active{
-    border-bottom: 3px solid #ffc64e;
-}
+
 header img{
     height: 80px;
     margin: 10px 20px;
     margin-left:5%;
+}
+
+body {
+  
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: 100px auto 120px;
+    margin: 0%;
+    min-height: 100dvh;
+    background-color: #EDEBD7;
+
 }
 .nav-menu {
     display: flex;
@@ -103,11 +106,88 @@ a{
     padding-right: .5em;
     font-size: 24px;
 }
-main{
-    margin: auto;
-    width: 100%;
+
+a:hover {
+   color: #fff;
+   background-color: #579cab;
 }
-footer{
+
+.main-content {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 16px;
+    border-style: solid;
+    border-color: #ffc64e;
+    border-width: 2px;
+    border-radius: 20px;
+    background-color: #20373b;
+}
+
+.speech-section {
+    text-align: center;
+    margin-bottom: 3rem;
+    padding: 2rem;
+    background: #ffc64e;
+    color: #fff;
+    border-radius: 20px;
+
+}
+
+.speech-section h1 {
+    
+    font-size: large;
+    margin-bottom: 2px;
+    color: #20373b;
+
+}
+
+.speech-subtitle {
+    font-size: medium;
+    color: #20373b;
+}
+
+h3 {
+    color: #fff;
+}
+
+.form-section {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #20373b;
+    color: #fff;
+}
+
+
+.response-message {
+    display: block;
+    text-align: center;
+    margin: auto;
+    padding: 5px;
+    border-radius: 6px;
+    font-weight: bold;
+    max-width: 600px;
+}
+
+.response-message:not(:empty) {
+    background-color: #20373b;
+    color: #ffc64e;
+    border: 1px solid #ffc64e;
+    border-radius: 5px;
+}
+
+.response-message.error {
+    background-color: #20373b;
+    color: #ffc64e;
+    border: 1px solid #ffc64e;
+    border-radius: 5px;
+}
+
+
+footer {
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -117,59 +197,89 @@ footer{
     font-family: "CanelaText-Medium", serif;
     border: 1px solid #20373b;
 }
+
 footer h5{
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 20px;
     margin-left: 20px;
 }
-/*Articles*/
-section{ 
+
+.active{
+    border-bottom: 3px solid #ffc64e;
+}
+
+#hamburger{
+    display: none;
+}
+
+form{
     display: flex;
-    justify-content: space-around;
 }
-article{
-    width: 28em;
-    height: 33em;
-    padding: 24px 11px;
-    margin:auto;
-    border-radius:20px;
-    box-sizing: border-box;
-    text-align: center;
+
+fieldset{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    width: 92%;
+    
 }
-.article_icon{
-    width: 250px;
-    height: 250px;
+
+legend{
+    padding: 5px;
+    font-size: medium;
+    word-spacing: 4px;
 }
-.climate{
-    background-color: #20373b;
-    color: #c3e7f1;
-    border: 2px solid #c3e7f1;
+
+input{
+    display: block;
+    width: 95%;
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 5px;
+    margin-right: 5px;
     border-radius: 20px;
 }
-.education{
-    background-color: #ffc64f;
+
+textarea{
+    display: block;
+    width: 95%;
+    padding: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: 1px solid #579cab;
+    border-radius: 20px;
+}
+
+label{
+   display: block;
+   width: 100%;
+   margin: 1%;
+}
+
+button[type='submit']{
+    background-color: beige;
     color: #20373b;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 40%;
+    margin-right: 40%;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: 700px;
+    font-size: 16px;
     border: 2px solid #20373b;
-    border-radius: 20px;
-}
-.equality{
-    background-color: #c3e7f1;
-    color: #20373b;
-    border: 2px solid #20373b;
-    border-radius: 20px;
-}
-/*Article content*/
-.article_header{
-    font-family: "CanelaText-Medium", serif;
-    font-size: 32px;
-}
-.article_p{
-    margin: 10px auto;
-    width: 250px;
-    font-family: "CanelaText-Light", serif;
-    font-weight: 700;
-    font-size: 20px;
+    min-width: 150px;
+    border-radius: 10px;
+
 }
 
 @media only screen and (max-width: 1400px){
@@ -240,4 +350,74 @@ article{
         padding: 10px;
         display: block;
     }
+}
+.description-box{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    padding: 5px;
+    background-color:#ffc64e;
+    border-radius: 8px;
+    overflow: auto;
+}
+
+.description-text {
+    overflow: auto;
+}
+
+.goal-description {
+    font-size: large;
+    margin-bottom: 20px;
+}
+
+.desc-image {
+    float: left;
+    width: 40%;
+    max-width: 400px;
+    margin-right: 30px;
+    margin-bottom: 15px;
+    border-radius: 6px;
+}
+
+.desc-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
+
+}
+
+.space-divider {
+    height: 50px;
+}
+
+
+.key-facts {
+    margin-bottom: 2px;
+    text-align: center;
+    background-color: #579cab;
+    border-radius: 8px;
+}
+
+key-facts h2 {
+    color:#579cab;
+    padding-bottom: 5px;
+    margin-bottom: 2px;
+    text-align: center;
+}
+
+.key-facts ul {
+    list-style-type: none;
+}
+
+.key-facts li {
+    padding: 2px;
+    position: relative;
+    padding-left: 2px;
+}
+
+.key-facts li:before {
+    content: "-";
+    color: #ffc64e;
+    font-size: medium;
+    position:relative;
+    left: 3;
 }
